[레거시 코드 리팩터링 - 2단계] 지토(김지민) 미션 제출합니다. (#563)
* feat: 이름을 관리하는 클래스 추가

* feat: 가격을 관리하는 클래스 추가

* refactor: Product를 JPA 기반으로 리펙토링

* refactor: MenuGroup을 JPA 기반으로 리펙토링

* feat: 수량을 관리하는 클래스 추가

* refactor: Menu를 JPA 기반으로 리펙토링

* feat: 동일성 여부를 반환하는 기능 추가

* feat: Auditing 기능 추가

* feat: 손님 수를 관리하는 클래스 추가

* refactor: Order 관련 도메인을 JPA 기반으로 리펙토링

* refactor: Dao 관련 네이밍을 Repository로 변경

* refactor: 통합 테스트 관련 어노테이션 네이밍 변경

* refactor: 매직 넘버 상수로 치환

* refactor: OrderLineItem 컬렉션을 일급 컬렉션으로 분리

* refactor: MenuProduct 컬렉션을 일급 컬렉션으로 분리

* remove: 사용하지 않는 클래스, 메서드 삭제

* refactor: OrderTable 컬렉션을 일급 컬렉션으로 분리

* test: 테스트 케이스 검증 로직 리펙토링

* refactor: 재정의가 필요 없는 메서드 삭제

* refactor: Wrapper Class의 필드 네이밍 변경

* refactor: 별도의 식별자를 가진 도메인 equals & hashcode 재정의

* style: 메서드 정렬 순서 변경

* refactor: Dao 네이밍 수정

* refactor: Wrapper Class Column 설정 추가

* refactor: final 키워드 추가

* test: 예외 발생 시 구체적인 에외 클래스로 검증하도록 변경

* test: 테스트에서 중복되는 코드를 메서드로 분리