@@ -1,45 +1,40 @@
 package kitchenpos.application;
 
-import static kitchenpos.fixture.MenuFixture.메뉴_생성;
-import static kitchenpos.fixture.MenuGroupFixture.메뉴_그룹_생성;
-import static kitchenpos.fixture.MenuProductFixture.메뉴_상품_생성;
-import static kitchenpos.fixture.ProductFixture.상품_생성;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
-import kitchenpos.config.ServiceTest;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.MenuGroupDao;
-import kitchenpos.dao.MenuProductDao;
-import kitchenpos.dao.ProductDao;
+import kitchenpos.application.exception.MenuGroupNotFoundException;
+import kitchenpos.config.IntegrationTest;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuGroup;
 import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Product;
+import kitchenpos.domain.exception.InvalidPriceException;
+import kitchenpos.repository.MenuGroupRepository;
+import kitchenpos.repository.MenuRepository;
+import kitchenpos.repository.ProductRepository;
+import kitchenpos.ui.dto.request.CreateMenuProductRequest;
+import kitchenpos.ui.dto.request.CreateMenuRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Autowired;
 
-@ServiceTest
+@IntegrationTest
 @SuppressWarnings("NonAsciiCharacters")
 class MenuServiceTest {
 
     @Autowired
-    MenuGroupDao menuGroupDao;
+    MenuGroupRepository menuGroupRepository;
 
     @Autowired
-    ProductDao productDao;
+    ProductRepository productRepository;
 
     @Autowired
-    MenuProductDao menuProductDao;
-
-    @Autowired
-    MenuDao menuDao;
+    MenuRepository menuRepository;
 
     @Autowired
     MenuService menuService;
@@ -47,17 +42,20 @@ class MenuServiceTest {
     @Test
     void create_메서드는_menu를_전달하면_menu를_저장하고_반환한다() {
         // given
-        final MenuGroup persistMenuGroup = menuGroupDao.save(메뉴_그룹_생성());
-        final Product persistProduct = productDao.save(상품_생성());
-        final MenuProduct menuProduct = 메뉴_상품_생성(persistProduct.getId());
-        final Menu menu = 메뉴_생성(persistMenuGroup.getId(), Arrays.asList(menuProduct));
+        final MenuGroup persistMenuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹"));
+        final Product persistProduct = productRepository.save(new Product("상품", BigDecimal.TEN));
+        final CreateMenuRequest request = new CreateMenuRequest(
+                "메뉴",
+                BigDecimal.TEN,
+                persistMenuGroup.getId(),
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when
-        final Menu actual = menuService.create(menu);
+        final Menu actual = menuService.create(request);
 
         assertAll(
                 () -> assertThat(actual.getId()).isPositive(),
-                () -> assertThat(actual.getName()).isEqualTo(menu.getName())
+                () -> assertThat(actual.getName()).isEqualTo(request.getName())
         );
     }
 
@@ -65,80 +63,58 @@ class MenuServiceTest {
     @ValueSource(strings = {"-1", "-2", "-3"})
     void create_메서드는_menu의_price가_음수라면_예외가_발생한다(final String invalidPrice) {
         // given
-        final MenuGroup persistMenuGroup = menuGroupDao.save(메뉴_그룹_생성());
-        final Product persistProduct = productDao.save(상품_생성());
-        final MenuProduct menuProduct = 메뉴_상품_생성(persistProduct.getId());
-        final Menu invalidMenu = 메뉴_생성(
-                persistMenuGroup.getId(),
-                Arrays.asList(menuProduct),
+        final MenuGroup persistMenuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹"));
+        final Product persistProduct = productRepository.save(new Product("상품", BigDecimal.TEN));
+        final CreateMenuRequest invalidRequest = new CreateMenuRequest(
+                "메뉴",
                 new BigDecimal(invalidPrice),
-                "메뉴"
-        );
+                persistMenuGroup.getId(),
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> menuService.create(invalidRequest))
+                .isInstanceOf(InvalidPriceException.class);
     }
 
     @Test
     void create_메서드는_menu의_price가_null이라면_예외가_발생한다() {
         // given
-        final MenuGroup persistMenuGroup = menuGroupDao.save(메뉴_그룹_생성());
-        final Product persistProduct = productDao.save(상품_생성());
-        final MenuProduct menuProduct = 메뉴_상품_생성(persistProduct.getId());
-        final Menu invalidMenu = 메뉴_생성(
-                persistMenuGroup.getId(),
-                Arrays.asList(menuProduct),
+        final MenuGroup persistMenuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹"));
+        final Product persistProduct = productRepository.save(new Product("상품", BigDecimal.TEN));
+        final CreateMenuRequest invalidRequest = new CreateMenuRequest(
+                "메뉴",
                 null,
-                "메뉴"
-        );
+                persistMenuGroup.getId(),
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> menuService.create(invalidRequest))
+                .isInstanceOf(InvalidPriceException.class);
     }
 
     @Test
     void create_메서드는_menu의_menuGroupId가_존재하지_않는다면_예외가_발생한다() {
         // given
-        final Product persistProduct = productDao.save(상품_생성());
-        final Menu invalidMenu = 메뉴_생성(
-                -999L,
-                Arrays.asList(메뉴_상품_생성(persistProduct.getId())),
+        final Product persistProduct = productRepository.save(new Product("상품", BigDecimal.TEN));
+        final CreateMenuRequest invalidRequest = new CreateMenuRequest(
+                "메뉴",
                 BigDecimal.TEN,
-                "메뉴"
-        );
+                -999L,
+                List.of(new CreateMenuProductRequest(persistProduct.getId(), 1L)));
 
         // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    void create_메서드는_menu의_menuPrice가_존재하지_않는다면_예외가_발생한다() {
-        // given
-        final MenuGroup persistMenuGroup = menuGroupDao.save(메뉴_그룹_생성());
-        final Product persistProduct = productDao.save(상품_생성());
-        final Menu invalidMenu = 메뉴_생성(
-                persistMenuGroup.getId(),
-                Arrays.asList(메뉴_상품_생성(persistProduct.getId())),
-                null,
-                "메뉴"
-        );
-
-        // when & then
-        assertThatThrownBy(() -> menuService.create(invalidMenu))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> menuService.create(invalidRequest))
+                .isInstanceOf(MenuGroupNotFoundException.class);
     }
 
     @Test
     void list_메서드는_등록한_모든_menu를_반환한다() {
         // given
-        final MenuGroup persistMenuGroup = menuGroupDao.save(메뉴_그룹_생성());
-        final Product persistProduct = productDao.save(상품_생성());
-        final Menu expected = menuDao.save(
-                메뉴_생성(persistMenuGroup.getId(), Arrays.asList(메뉴_상품_생성(persistProduct.getId())))
-        );
+        final MenuGroup persistMenuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹"));
+        final Product persistProduct = productRepository.save(new Product("상품", BigDecimal.TEN));
+        final MenuProduct menuProduct = new MenuProduct(persistProduct, 1);
+        final Menu menu = Menu.of("메뉴", BigDecimal.TEN, List.of(menuProduct), persistMenuGroup);
+        final Menu expected = menuRepository.save(menu);
 
         // when
         final List<Menu> actual = menuService.list();
