@@ -1,38 +1,60 @@
 package kitchenpos.application;
 
-import static kitchenpos.fixture.OrderFixture.주문_생성;
-import static kitchenpos.fixture.OrderTableFixture.주문_테이블_생성;
-import static kitchenpos.fixture.TableGroupFixture.단체_지정_생성;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
-import java.util.Arrays;
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import kitchenpos.config.ServiceTest;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.TableGroupDao;
+import kitchenpos.config.IntegrationTest;
+import kitchenpos.domain.Menu;
+import kitchenpos.domain.MenuGroup;
+import kitchenpos.domain.MenuProduct;
+import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
+import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
+import kitchenpos.domain.Product;
 import kitchenpos.domain.TableGroup;
+import kitchenpos.domain.exception.InvalidOrderStatusCompletionException;
+import kitchenpos.domain.exception.InvalidOrderTableSizeException;
+import kitchenpos.repository.MenuGroupRepository;
+import kitchenpos.repository.MenuRepository;
+import kitchenpos.repository.OrderRepository;
+import kitchenpos.repository.OrderTableRepository;
+import kitchenpos.repository.ProductRepository;
+import kitchenpos.repository.TableGroupRepository;
+import kitchenpos.ui.dto.request.CreateOrderGroupOrderTableRequest;
+import kitchenpos.ui.dto.request.CreateTableGroupRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Autowired;
 
-@ServiceTest
+@IntegrationTest
 @SuppressWarnings("NonAsciiCharacters")
 class TableGroupServiceTest {
 
     @Autowired
-    OrderTableDao orderTableDao;
+    OrderTableRepository orderTableRepository;
 
     @Autowired
-    OrderDao orderDao;
+    OrderRepository orderRepository;
 
     @Autowired
-    TableGroupDao tableGroupDao;
+    TableGroupRepository tableGroupRepository;
+
+    @Autowired
+    MenuGroupRepository menuGroupRepository;
+
+    @Autowired
+    ProductRepository productRepository;
+
+    @Autowired
+    MenuRepository menuRepository;
 
     @Autowired
     TableGroupService tableGroupService;
@@ -40,67 +62,70 @@ class TableGroupServiceTest {
     @Test
     void create_메서드는_tableGroup을_전달하면_tableGroup을_저장하고_반환한다() {
         // given
-        final OrderTable persistOrderTable1 = orderTableDao.save(주문_테이블_생성(true));
-        final OrderTable persistOrderTable2 = orderTableDao.save(주문_테이블_생성(true));
-        final TableGroup tableGroup = 단체_지정_생성(Arrays.asList(persistOrderTable1, persistOrderTable2));
+        final OrderTable persistOrderTable1 = orderTableRepository.save(new OrderTable(0, true));
+        final OrderTable persistOrderTable2 = orderTableRepository.save(new OrderTable(0, true));
+        final CreateTableGroupRequest request = convertCreateTableGroupRequest(
+                List.of(persistOrderTable1, persistOrderTable2)
+        );
 
         // when
-        final TableGroup actual = tableGroupService.create(tableGroup);
+        final TableGroup actual = tableGroupService.create(request);
 
         // then
         assertThat(actual.getId()).isPositive();
     }
 
-    @ParameterizedTest(name = "tableGroup이 {0}이면 예외가 발생한다.")
-    @NullAndEmptySource
-    void create_메서드는_tableGroup이_없는_tableGroup을_전달하면_예외가_발생한다(final List<OrderTable> invalidOrderTables) {
+    @Test
+    void create_메서드는_tableGroup이_비어있는_tableGroup을_전달하면_예외가_발생한다() {
         // given
-        final TableGroup invalidTableGroup = 단체_지정_생성(invalidOrderTables);
+        final CreateTableGroupRequest invalidRequest = convertCreateTableGroupRequest(Collections.emptyList());
 
         // when & then
-        assertThatThrownBy(() -> tableGroupService.create(invalidTableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(invalidRequest))
+                .isInstanceOf(InvalidOrderTableSizeException.class);
     }
 
     @Test
     void create_메서드는_tableGroup이_하나인_tableGroup을_전달하면_예외가_발생한다() {
         // given
-        final OrderTable persistOrderTable = orderTableDao.save(주문_테이블_생성(true));
-        final TableGroup invalidTableGroup = 단체_지정_생성(Arrays.asList(persistOrderTable));
+        final OrderTable persistOrderTable = orderTableRepository.save(new OrderTable(0, true));
+        final CreateTableGroupRequest invalidRequest = convertCreateTableGroupRequest(List.of(persistOrderTable));
 
         // when & then
-        assertThatThrownBy(() -> tableGroupService.create(invalidTableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(invalidRequest))
+                .isInstanceOf(InvalidOrderTableSizeException.class);
     }
 
     @Test
     void create_메서드는_tableGroup이_비어있지_않은_tableGroup을_전달하면_예외가_발생한다() {
         // given
-        final OrderTable persistOrderTable1 = orderTableDao.save(주문_테이블_생성(false));
-        final OrderTable persistOrderTable2 = orderTableDao.save(주문_테이블_생성(false));
-        final TableGroup invalidTableGroup = 단체_지정_생성(Arrays.asList(persistOrderTable1, persistOrderTable2));
+        final OrderTable persistOrderTable1 = orderTableRepository.save(new OrderTable(0, false));
+        final OrderTable persistOrderTable2 = orderTableRepository.save(new OrderTable(0, false));
+        final CreateTableGroupRequest invalidRequest = convertCreateTableGroupRequest(
+                List.of(persistOrderTable1, persistOrderTable2)
+        );
 
         // when & then
-        assertThatThrownBy(() -> tableGroupService.create(invalidTableGroup))
+        assertThatThrownBy(() -> tableGroupService.create(invalidRequest))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void ungroup_메서드는_지정한_tableGroup의_id의_그룹을_해제한다() {
         // given
-        final OrderTable persistOrderTable1 = orderTableDao.save(주문_테이블_생성(true));
-        final OrderTable persistOrderTable2 = orderTableDao.save(주문_테이블_생성(true));
-        final TableGroup persistTableGroup = tableGroupDao.save(
-                단체_지정_생성(Arrays.asList(persistOrderTable1, persistOrderTable2))
-        );
+        final OrderTable persistOrderTable1 = orderTableRepository.save(new OrderTable(0, true));
+        final OrderTable persistOrderTable2 = orderTableRepository.save(new OrderTable(0, true));
+        final Menu persistMenu = persistMenu();
+        persistOrderBy(persistMenu,  OrderStatus.COMPLETION, persistOrderTable1, persistOrderTable2);
+        final TableGroup persistTableGroup = persistTableGroup(persistOrderTable1, persistOrderTable2);
 
         // when
         tableGroupService.ungroup(persistTableGroup.getId());
 
         // then
         assertAll(
-                () -> assertThat(persistOrderTable1.getTableGroupId()).isNull(),
-                () -> assertThat(persistOrderTable2.getTableGroupId()).isNull()
+                () -> assertThat(persistOrderTable1.getTableGroup()).isNull(),
+                () -> assertThat(persistOrderTable2.getTableGroup()).isNull()
         );
     }
 
@@ -108,20 +133,83 @@ class TableGroupServiceTest {
     @ValueSource(strings = {"MEAL", "COOKING"})
     void upgroup_메서드는_orderTable의_order의_상태가_COMPLETION이_아닌_tableGroup을_전달하면_예외가_발생한다(final String invalidOrderStatus) {
         // given
-        final OrderTable persistOrderTable1 = orderTableDao.save(주문_테이블_생성(true));
-        final OrderTable persistOrderTable2 = orderTableDao.save(주문_테이블_생성(true));
-        orderDao.save(주문_생성(persistOrderTable1.getId(), invalidOrderStatus));
-        orderDao.save(주문_생성(persistOrderTable2.getId(), invalidOrderStatus));
-        final TableGroup persistTableGroup = tableGroupDao.save(
-                단체_지정_생성(Arrays.asList(persistOrderTable1, persistOrderTable2))
-        );
-        persistOrderTable1.setTableGroupId(persistTableGroup.getId());
-        persistOrderTable2.setTableGroupId(persistTableGroup.getId());
-        orderTableDao.save(persistOrderTable1);
-        orderTableDao.save(persistOrderTable2);
+        final OrderTable persistOrderTable1 = orderTableRepository.save(new OrderTable(0, true));
+        final OrderTable persistOrderTable2 = orderTableRepository.save(new OrderTable(0, true));
+        final Menu persistMenu = persistMenu();
+        final OrderStatus orderStatus = OrderStatus.valueOf(invalidOrderStatus);
+        persistOrderBy(persistMenu, orderStatus, persistOrderTable1, persistOrderTable2);
+        final TableGroup persistTableGroup = persistTableGroup(persistOrderTable1, persistOrderTable2);
+        persistOrderTables(persistOrderTable1, persistOrderTable2, persistTableGroup);
 
         // when & then
         assertThatThrownBy(() -> tableGroupService.ungroup(persistTableGroup.getId()))
-                .isInstanceOf(IllegalArgumentException.class);
+                .isInstanceOf(InvalidOrderStatusCompletionException.class);
+    }
+
+    private CreateTableGroupRequest convertCreateTableGroupRequest(final List<OrderTable> orderTables) {
+        final List<CreateOrderGroupOrderTableRequest> createOrderGroupOrderTableRequests = new ArrayList<>();
+
+        for (final OrderTable orderTable : orderTables) {
+            createOrderGroupOrderTableRequests.add(new CreateOrderGroupOrderTableRequest(orderTable.getId()));
+        }
+
+        return new CreateTableGroupRequest(createOrderGroupOrderTableRequests);
+    }
+
+    private Menu persistMenu() {
+        final MenuGroup persistMenuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹"));
+        final Product persistProduct = productRepository.save(new Product("상품", BigDecimal.TEN));
+        final MenuProduct persistMenuProduct = new MenuProduct(persistProduct, 1);
+
+        return menuRepository.save(Menu.of(
+                "메뉴",
+                BigDecimal.TEN,
+                List.of(persistMenuProduct),
+                persistMenuGroup)
+        );
+    }
+
+    private void persistOrderBy(
+            final Menu persistMenu,
+            final OrderStatus orderStatus,
+            final OrderTable persistOrderTable1,
+            final OrderTable persistOrderTable2
+    ) {
+        final OrderLineItem persistOrderLineItem1 = new OrderLineItem(persistMenu, 1L);
+        final OrderLineItem persistOrderLineItem2 = new OrderLineItem(persistMenu, 1L);
+        final Order order1 = new Order(
+                persistOrderTable1,
+                orderStatus,
+                LocalDateTime.now().minusHours(3),
+                List.of(persistOrderLineItem1)
+        );
+        final Order order2 = new Order(
+                persistOrderTable2,
+                orderStatus,
+                LocalDateTime.now().minusHours(3),
+                List.of(persistOrderLineItem2)
+        );
+        orderRepository.save(order1);
+        orderRepository.save(order2);
+    }
+
+    private TableGroup persistTableGroup(final OrderTable persistOrderTable1, final OrderTable persistOrderTable2) {
+        return tableGroupRepository.save(
+                new TableGroup(List.of(persistOrderTable1, persistOrderTable2))
+        );
+    }
+
+    private void persistOrderTables(
+            final OrderTable persistOrderTable1,
+            final OrderTable persistOrderTable2,
+            final TableGroup tableGroup
+    ) {
+        if (tableGroup != null) {
+            persistOrderTable1.group(tableGroup);
+            persistOrderTable2.group(tableGroup);
+        }
+
+        orderTableRepository.save(persistOrderTable1);
+        orderTableRepository.save(persistOrderTable2);
     }
 }
